minikube/1-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-gateway
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: micro-gateway
  ports:
    - name: gateway
      port: 4000
      targetPort: 4000
      protocol: TCP
